<resources>
    <string name="woodstorage_title">Wood Storage</string>

    <string name="log_level_debug">debug</string>
    <string name="log_level_verbose">verbose</string>
    <string name="log_level_info">info</string>
    <string name="log_level_warn">warning</string>
    <string name="log_level_error">error</string>

    <string name="woodstorage_action_filter">Filter</string>
    <string name="woodstorage_action_sort">Sort Order</string>
    <string name="woodstorage_action_clear">Clear</string>
    <string name="woodstorage_action_save">Save</string>
    <string name="woodstorage_action_share">Share</string>

    <string name="dialog_tag_filter_title">Only show the following tags</string>

    <string name="woodstorage_title_share_file">Share log file</string>
    <string name="woodstorage_message_log_saved_to_sd">Logfile successfully saved to %1$s</string>
    <string name="woodstorage_message_log_saved_to_sd_failed">Failed saving log to SD</string>
    <string name="woodstorage_error_no_app_for_file">No app found to share file with</string>
</resources>
