<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/woodstorage_action_filter"
        android:icon="@drawable/ic_filter_outline_white_24dp"
        android:title="@string/woodstorage_action_filter"
        app:showAsAction="always" />

    <item
        android:id="@+id/woodstorage_action_sort"
        android:icon="@drawable/ic_sort_white_24dp"
        android:title="@string/woodstorage_action_sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/woodstorage_action_save_on_sd"
        android:icon="@drawable/ic_save_white_24dp"
        android:title="@string/woodstorage_action_save"
        app:showAsAction="always" />

    <item
        android:id="@+id/woodstorage_action_share"
        android:icon="@drawable/ic_share_white_24dp"
        android:title="@string/woodstorage_action_share"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/woodstorage_action_clear"
        android:icon="@drawable/ic_delete_white_24dp"
        android:title="@string/woodstorage_action_clear"
        app:showAsAction="ifRoom|withText" />

</menu>